// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toaster > components > renders correctly Toast.Button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`toaster > components > renders correctly Toast.Button and variant ghost 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1obzich2 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_ghost__1x0t66mj styles_undefined_compound_18__1x0t66m13"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`toaster > components > renders correctly Toast.Link 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__o0z6wk0 styles_prominence_strong__o0z6wk4 styles_sentiment_info__o0z6wk2 styles_oneLine_false__o0z6wk8 styles_variant_bodySmallStrong__o0z6wka styles_type_standalone__o0z6wkd styles_undefined_compound_5__o0z6wkj styles__o0z6wkn"
      data-variant="standalone"
      href="scaleway.com"
    >
      Test
    </a>
  </div>
</DocumentFragment>
`;

exports[`toaster > renders correctly with all kind of toast 1`] = `
<span
  class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
>
  This is a success
</span>
`;

exports[`toaster > renders correctly with all kind of toast 2`] = `
<span
  class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
>
  This is an error
</span>
`;

exports[`toaster > renders correctly with all kind of toast 3`] = `
<span
  class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
>
  This is a warning
</span>
`;

exports[`toaster > renders correctly with all kind of toast 4`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="toaster"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right styles__1obzich0"
        data-stacked="true"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="success"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.95;"
          tabindex="0"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js0: 100%;"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <title>
                CheckCircleOutlineIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M10 3.455a6.545 6.545 0 1 0 0 13.09 6.545 6.545 0 0 0 0-13.09M2 10a8 8 0 1 1 16 0 8 8 0 0 1-16 0m10.847-2.41a.727.727 0 0 1 .169 1.015l-3.03 4.242a.727.727 0 0 1-1.106.091L7.06 11.12a.727.727 0 1 1 1.029-1.028l1.211 1.21 2.531-3.543a.727.727 0 0 1 1.015-.169"
              />
            </svg>
            <span
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
            >
              This is a success
            </span>
          </div>
          <button
            aria-label="close"
            class="styles__1obzich1 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_success__1x0t66mb styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_4__1x0t66mp"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                CloseIcon
              </title>
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              aria-valuemax="100"
              aria-valuemin="0"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="error"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.975;"
          tabindex="0"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js0: 100%;"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <title>
                CloseCircleOutlineIcon
              </title>
              <path
                d="M10 16.67c-3.675 0-6.67-2.995-6.67-6.67S6.325 3.33 10 3.33s6.67 2.995 6.67 6.67-2.995 6.67-6.67 6.67m0-15c-4.61 0-8.33 3.72-8.33 8.33s3.72 8.33 8.33 8.33 8.33-3.72 8.33-8.33S14.61 1.67 10 1.67m2.16 5L10 8.83 7.84 6.67 6.67 7.84 8.83 10l-2.16 2.16 1.17 1.17L10 11.17l2.16 2.16 1.17-1.17L11.17 10l2.16-2.16z"
              />
            </svg>
            <span
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
            >
              This is an error
            </span>
          </div>
          <button
            aria-label="close"
            class="styles__1obzich1 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_danger__1x0t66m6 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_2__1x0t66mn"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                CloseIcon
              </title>
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              aria-valuemax="100"
              aria-valuemin="0"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-in="true"
          data-pos="top"
          id="warning"
          role="alert"
          style="--y: 0px; --g: 12; --s: 1;"
          tabindex="0"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js0: 100%;"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <title>
                AlertCircleOutlineIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M10 3.455a6.545 6.545 0 1 0 0 13.09 6.545 6.545 0 0 0 0-13.09M2 10a8 8 0 1 1 16 0 8 8 0 0 1-16 0m8-3.152c.402 0 .727.326.727.728v3.03a.727.727 0 0 1-1.454 0v-3.03c0-.402.325-.728.727-.728m-.727 6.182c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728z"
              />
            </svg>
            <span
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
            >
              This is a warning
            </span>
          </div>
          <button
            aria-label="close"
            class="styles__1obzich1 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_warning__1x0t66mc styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_5__1x0t66mq"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                CloseIcon
              </title>
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              aria-valuemax="100"
              aria-valuemin="0"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
